[project]
name = "cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.3"
authors = []
dependencies = [
  "cogapp>=3.6.0",
  "cpplint>=2.0.2",
  "deepdiff>=8.6.2",
  "deepmerge>=2.0",
  "fnvhash>=0.2.1",
  "gdtoolkit>=4.5.0",
  "imgui-bundle[full]>=1.92.600",
  "livereload>=2.7.1",
  "lxml>=6.0.2",
  "mypy>=1.18.2",
  "numpy>=2.3.5",
  "opencv-python>=4.11.0.86",
  "pillow>=12.0.0",
  "pip>=25.3",
  "pre-commit>=4.5.1",
  "protobuf>=6.33.5",
  "pycolornames>=1.1.0",
  "pydantic>=2.12.5",
  "pydub>=0.25.1",
  "pyfiglet>=1.0.4",
  "pyglm>=2.8.3",
  "pyjson5>=2.0.0",
  "pyopengl>=3.1.10",
  "pyright>=1.1.408",
  "pytest>=9.0.1",
  "pyyaml>=6.0.3",
  "rich>=14.2.0",
  "rpp>=0.5",
  "ruff>=0.14.6",
  "scons>=4.10.1",
  "spacy>=3.8.11",
  "toml>=0.10.2",
  "typer>=0.20.0",
  "types-pyyaml>=6.0.12.20250915",
  "websockets>=15.0.1",
  "yamllint>=1.38.0",
]
packages = [
  { include = "cli" },
]

[project.scripts]
cli = "cli:main"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = []

[tool.ruff]
line-length = 90
indent-width = 2

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN",
  "B011",
  "B023",
  "BLE001",
  "C401",
  "C901",
  "COM",
  "D",
  "DTZ005",
  "E501",
  "E731",
  "E741",
  "ERA001",
  "FA102",
  "FBT001",
  "FBT002",
  "FBT003",
  "FIX002",
  "G001",
  "G004",
  "INP001",
  "LOG002",
  "N802",
  "N806",
  "N815",
  "PERF401",
  "PGH003",
  "PGH004",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "PLR1714",
  "PLR1722",
  "PLR2004",
  "PLR5501",
  "PLW0603",
  "PT015",
  "PTH123",
  "RET504",
  "RET505",
  "RET507",
  "RUF001",
  "RUF003",
  "RUF012",
  "S",
  "SIM102",
  "SIM103",
  "SIM108",
  "SIM114",
  "SIM223",
  "SLF001",
  "T100",
  "T201",
  "T203",
  "TD002",
  "TD003",
  "TD005",
  "TRY300",
  "UP032",
  "UP035",
]

[tool.ruff.lint.per-file-ignores]
"*_pb2.py*" = ["ALL"]

[tool.pytest.ini_options]
pythonpath = "cli"
testpaths = ["cli"]
python_files = ["*.py"]
python_functions = ["test_*", "_test_*"]
python_classes = ["Test*"]

[tool.ty.environment]
root = ["./cli"]

[tool.mypy]
ignore_missing_imports = false

[tool.pyright]
include = ["cli"]
exclude = [
  "**/.*",
  "**/node_modules",
  "**/__pycache__",
  "**/.venv",
  "**/build",
  "**/dist",
]
# ignore = ["src/old_stuff"]
# defineConstant = { DEBUG = true }
# stubPath = "src/stubs"
reportMissingImports = "none"
# reportMissingTypeStubs = false
reportMissingModuleSource = "none"
pythonVersion = "3.11"
# pythonPlatform = "Linux"
# executionEnvironments = [
#   { root = "src/web", pythonVersion = "3.5", pythonPlatform = "Windows", extraPaths = [ "src/service_libs" ], reportMissingImports = "warning" },
#   { root = "src/sdk", pythonVersion = "3.0", extraPaths = [ "src/backend" ] },
#   { root = "src/tests", extraPaths = ["src/tests/e2e", "src/sdk" ]},
#   { root = "src" }
# ]

reportOverlappingOverload = "none"
reportInvalidTypeArguments = "none"
