[project]
name = "cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
  "cogapp>=3.6.0",
  "pre-commit>=4.5.1",
  "pytest>=9.0.3",
  "typer>=0.24.1",
  "yamllint>=1.38.0",
]

[tool.ruff]
line-length = 90
indent-width = 2

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN",
  "B011",
  "B023",
  "BLE001",
  "C401",
  "C901",
  "COM",
  "D",
  "DTZ005",
  "E501",
  "E731",
  "E741",
  "ERA001",
  "FA102",
  "FBT001",
  "FBT002",
  "FBT003",
  "FIX002",
  "G001",
  "G004",
  "INP001",
  "LOG002",
  "N802",
  "N806",
  "N815",
  "PERF401",
  "PGH003",
  "PGH004",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "PLR1714",
  "PLR1722",
  "PLR2004",
  "PLR5501",
  "PLW0603",
  "PT015",
  "PTH123",
  "RET504",
  "RET505",
  "RET507",
  "RUF001",
  "RUF003",
  "RUF012",
  "S",
  "SIM102",
  "SIM103",
  "SIM108",
  "SIM114",
  "SIM223",
  "SLF001",
  "T100",
  "T201",
  "T203",
  "TD002",
  "TD003",
  "TD005",
  "TRY300",
  "UP032",
  "UP035",
]

[tool.ruff.lint.per-file-ignores]
"*_pb2.py*" = ["ALL"]

[tool.pytest.ini_options]
pythonpath = "cli"
testpaths = ["cli"]
python_files = ["*.py"]
python_functions = ["test_*", "_test_*"]
python_classes = ["Test*"]

[tool.ty.environment]
root = ["./cli"]

[tool.mypy]
ignore_missing_imports = false

[tool.pyright]
include = ["cli"]
exclude = [
  "**/.*",
  "**/node_modules",
  "**/__pycache__",
  "**/.venv",
  "**/build",
  "**/dist",
]
# ignore = ["src/old_stuff"]
# defineConstant = { DEBUG = true }
# stubPath = "src/stubs"
reportMissingImports = "none"
# reportMissingTypeStubs = false
reportMissingModuleSource = "none"
pythonVersion = "3.11"
# pythonPlatform = "Linux"
# executionEnvironments = [
#   { root = "src/web", pythonVersion = "3.5", pythonPlatform = "Windows", extraPaths = [ "src/service_libs" ], reportMissingImports = "warning" },
#   { root = "src/sdk", pythonVersion = "3.0", extraPaths = [ "src/backend" ] },
#   { root = "src/tests", extraPaths = ["src/tests/e2e", "src/sdk" ]},
#   { root = "src" }
# ]

reportOverlappingOverload = "none"
reportInvalidTypeArguments = "none"
